2.0.2 (unreleased)
------------------

- Updated Select2 widget JavaScript


2.0.1 (2016-10-25)
------------------

- Drop support for Python 2.6.

- Documentation reorganization and clean up to conform with Pylons Project
  projects.

- Fix select and select2 widget templates failing on Python 3.x

2.0 (2016-10-23)
----------------

- Release polish


2.0b3 (2016-10-22)
------------------

- Update demos and add standalone mini example

2.0b2 (2016-10-22)
------------------

- Fix README on PyPi

2.0b1 (2016-10-22)
------------------

- Updated bootstrap to 3.3.6.

- Fix dateparts.pt and datetimeinput.pt for changes in bootstrap v3.0.3.
  (The culprit is boostrap commit
  `853b69f <https://github.com/twbs/bootstrap/commit/853b69f2d>`_.)

- Make ``dateinput`` work again by using the fixed name "date" as expected
  by the pstruct schema.  See https://github.com/Pylons/deform/pull/221.

- Changed ``ISO8601_REGEX`` import to match change in colander

- Add support for Python 3.4, PyPy3.

- Raise ``Invalid`` rather than other errors when deserializing broken
  or malicious pstructs with invalid types.  See
  https://github.com/Pylons/deform/pull/203

- Read a time widget.

- Fix a bug in the DateInputWidget.  See
  https://github.com/Pylons/deform/pull/192.

- Ensured that ``None`` would not show up as a css class name in rendered
  template output.  See https://github.com/Pylons/deform/pull/191

  we now use dashed-names (e.g. ``deform-seq``).  A full list of changes is
  below::

    Old                               New

    deformClosebutton                 deform-closebutton
    deformFileupload                  deform-file-upload
    deformFormFieldset                deform-form-fieldset
    deformInsertBefore                deform-insert-before
    deformOrderbutton                 deform-orderbutton
    deformProto                       deform-proto
    deformReplaces                    deform-replaces
    deformSeq                         deform-seq