@@ -35,7 +35,7 @@
                 tal:attributes="label item.label">
         <option tal:repeat="(value, description) item.options"
                 tal:attributes="
-                selected (multiple and value in list(map(unicode, cstruct)) or value == list(map(unicode, cstruct))) and 'selected';
+                selected python:field.widget.get_select_value(cstruct, value);
                 class css_class;
                 label field.widget.long_label_generator and description;
                 value value"
@@ -43,7 +43,7 @@
       </optgroup>
       <option tal:condition="not isinstance(item, optgroup_class)"
               tal:attributes="
-              selected (multiple and item[0] in list(map(unicode, cstruct)) or item[0] == unicode(cstruct)) and 'selected';
+              selected python:field.widget.get_select_value(cstruct, item[0]);
               class css_class;
               value item[0]">${item[1]}</option>
     </tal:loop>
